--- a/Com.Bekijkhet.MyBroker.Dal/Com.Bekijkhet.MyBroker.Dal.csproj
+++ b/Com.Bekijkhet.MyBroker.Dal/Com.Bekijkhet.MyBroker.Dal.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{DBF7CE48-C3FC-4A48-B4A1-48E1DEEE3B34}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>Com.Bekijkhet.MyRouter.BrokerClient</RootNamespace>
-    <AssemblyName>Com.Bekijkhet.BrokerClient</AssemblyName>
+    <ProjectGuid>{8349A17F-C717-4A31-853C-5662CBB3EE9D}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Com.Bekijkhet.MyBroker.Dal</RootNamespace>
+    <AssemblyName>Com.Bekijkhet.MyBroker.Dal</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -31,14 +31,7 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Compile Include="IBrokerClient.cs" />
-    <Compile Include="Broker.cs" />
-    <Compile Include="SendMessageException.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Com.Bekijkhet.Semtech\Com.Bekijkhet.Semtech.csproj">
-      <Project>{D9CD9366-CAB7-4436-A27B-C9972FBF44C7}</Project>
-      <Name>Com.Bekijkhet.Semtech</Name>
-    </ProjectReference>
+    <Compile Include="IDal.cs" />
+    <Compile Include="Application.cs" />
   </ItemGroup>
 </Project>
