--- a/Com.Bekijkhet.MyBroker.DalPsql/Com.Bekijkhet.MyBroker.DalPsql.csproj
+++ b/Com.Bekijkhet.MyBroker.DalPsql/Com.Bekijkhet.MyBroker.DalPsql.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{DBF7CE48-C3FC-4A48-B4A1-48E1DEEE3B34}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>Com.Bekijkhet.MyRouter.BrokerClient</RootNamespace>
-    <AssemblyName>Com.Bekijkhet.BrokerClient</AssemblyName>
+    <ProjectGuid>{E3CCFE77-5BE0-4085-B5EB-C90D4CE61669}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Com.Bekijkhet.MyBroker.DalPsql</RootNamespace>
+    <AssemblyName>Com.Bekijkhet.MyBroker.DalPsql</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -31,14 +31,6 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Compile Include="IBrokerClient.cs" />
-    <Compile Include="Broker.cs" />
-    <Compile Include="SendMessageException.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Com.Bekijkhet.Semtech\Com.Bekijkhet.Semtech.csproj">
-      <Project>{D9CD9366-CAB7-4436-A27B-C9972FBF44C7}</Project>
-      <Name>Com.Bekijkhet.Semtech</Name>
-    </ProjectReference>
+    <Compile Include="Dal.cs" />
   </ItemGroup>
 </Project>
