--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,6 +6,7 @@
   <repository path="../Com.Bekijkhet.Semtech/packages.config" />
   <repository path="..\Com.Bekijkhet.Logger\packages.config" />
   <repository path="..\Com.Bekijkhet.MyBroker.Console\packages.config" />
+  <repository path="..\Com.Bekijkhet.MyBroker.DalPsql\packages.config" />
   <repository path="..\Com.Bekijkhet.MyRouter.BrokerClientImpl\packages.config" />
   <repository path="..\Com.Bekijkhet.MyRouter.Console\packages.config" />
   <repository path="..\Com.Bekijkhet.MyRouter.DalPsql\packages.config" />
