--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,15 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="../Com.Bekijkhet.Logger/packages.config" />
+  <repository path="../Com.Bekijkhet.MyBroker.Console/packages.config" />
+  <repository path="../Com.Bekijkhet.MyBroker.DalPsql/packages.config" />
+  <repository path="../Com.Bekijkhet.MyRouter.BrokerClientImpl/packages.config" />
+  <repository path="../Com.Bekijkhet.MyRouter.Console/packages.config" />
   <repository path="../Com.Bekijkhet.MyRouter.DalPsql/packages.config" />
   <repository path="../Com.Bekijkhet.Semtech.Tests/packages.config" />
   <repository path="../Com.Bekijkhet.Semtech/packages.config" />
-  <repository path="..\Com.Bekijkhet.Logger\packages.config" />
-  <repository path="..\Com.Bekijkhet.MyBroker.Console\packages.config" />
-  <repository path="..\Com.Bekijkhet.MyBroker.DalPsql\packages.config" />
-  <repository path="..\Com.Bekijkhet.MyRouter.BrokerClientImpl\packages.config" />
-  <repository path="..\Com.Bekijkhet.MyRouter.Console\packages.config" />
-  <repository path="..\Com.Bekijkhet.MyRouter.DalPsql\packages.config" />
-  <repository path="..\Com.Bekijkhet.Semtech.Tests\packages.config" />
-  <repository path="..\Com.Bekijkhet.Semtech\packages.config" />
 </repositories>
