--- a/Com.Bekijkhet.MyBroker.Dal/Com.Bekijkhet.MyBroker.Dal.csproj
+++ b/Com.Bekijkhet.MyBroker.Dal/Com.Bekijkhet.MyBroker.Dal.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{8349A17F-C717-4A31-853C-5662CBB3EE9D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>Com.Bekijkhet.MyBroker.Dal</RootNamespace>
     <AssemblyName>Com.Bekijkhet.MyBroker.Dal</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
