--- a/Com.Bekijkhet.MyBroker.DalPsql/Com.Bekijkhet.MyBroker.DalPsql.csproj
+++ b/Com.Bekijkhet.MyBroker.DalPsql/Com.Bekijkhet.MyBroker.DalPsql.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{E3CCFE77-5BE0-4085-B5EB-C90D4CE61669}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>Com.Bekijkhet.MyBroker.DalPsql</RootNamespace>
     <AssemblyName>Com.Bekijkhet.MyBroker.DalPsql</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
