--- a/Com.Bekijkhet.Semtech/Com.Bekijkhet.Semtech.csproj
+++ b/Com.Bekijkhet.Semtech/Com.Bekijkhet.Semtech.csproj
@@ -44,6 +44,7 @@
     <Compile Include="PushDataJson.cs" />
     <Compile Include="PullData.cs" />
     <Compile Include="Txpk.cs" />
+    <Compile Include="PullResp.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
