--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="../Com.Bekijkhet.Logger/packages.config" />
   <repository path="../Com.Bekijkhet.MyBroker.Console/packages.config" />
+  <repository path="../Com.Bekijkhet.MyBroker.DalPsql.Tests/packages.config" />
   <repository path="../Com.Bekijkhet.MyBroker.DalPsql/packages.config" />
   <repository path="../Com.Bekijkhet.MyRouter.BrokerClient/packages.config" />
   <repository path="../Com.Bekijkhet.MyRouter.BrokerClientImpl/packages.config" />
