--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="../Com.Bekijkhet.Logger/packages.config" />
+  <repository path="../Com.Bekijkhet.MyBroker.BllImpl/packages.config" />
   <repository path="../Com.Bekijkhet.MyBroker.Console/packages.config" />
   <repository path="../Com.Bekijkhet.MyBroker.DalPsql.Tests/packages.config" />
   <repository path="../Com.Bekijkhet.MyBroker.DalPsql/packages.config" />
