--- a/Com.Bekijkhet.MyBroker.BllImpl/Com.Bekijkhet.MyBroker.BllImpl.csproj
+++ b/Com.Bekijkhet.MyBroker.BllImpl/Com.Bekijkhet.MyBroker.BllImpl.csproj
@@ -29,6 +29,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -48,5 +51,8 @@
       <Project>{2658618A-1674-4738-A517-38FCBE130DC0}</Project>
       <Name>Com.Bekijkhet.Lora</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
